# datalad-sexy-snippets

./: .appveyor.yml  .gitattributes  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test_crippledfs.yml
changelog.d/templates/: new_fragment.md.j2
datalad_sexy_snippets/: __init__.py  _version.py  hello_cmd.py
docs/: Makefile
docs/source/: conf.py
tools/metadata/: dataset-schema.yaml  make_rocrate.py  ro_crate_base.json
